server/client/index.css
html, body {
    width: 100vw;
    padding: 0;
    margin: 0;
    font-family: Verdana;
    font-size: 1.0em;
}

h1 {
    margin: 0;
    padding: 10px;
}

fieldset {
    border: none;
    float: left;
    width: 30%;
}

fieldset:first-of-type {
    width: 100vw;
}

legend {
    font-weight: bold;
}

input[type='text'] {
    width: 30%;
}

input[placeholder='Filter'] {
    height: 1.6em;
    margin: 4px 0px;
}

input[type='range'] {
    float: right;
    margin: 4px 0px;
}

select, textarea {
    width: 100%;
}

select, textarea, label {
    font-family: Tahoma;
    font-size: 0.8em;
}

.checkbox {
    float: right;
    padding: 4px 0px;
}

button {
    margin: 2px 0px;
    padding: 4px 6px;
}

textarea {
    white-space: pre;
    resize: none;
}

